# Project_embedding

./: .gitignore  README.md
openairinterface5g/: CMakeLists.txt  CSI_Payload_Detailed_Analysis.md  CSI_UCI_Payload_Analysis.md  TDL_A_사용_근거_정리.md  channel_coeff.txt  rbconfig.raw  reconfig.raw
openairinterface5g/contrib/oai_sionna_rfsim/: Makefile  README.md  oai_sionna_bridge.h  oai_sionna_bridge_stub.c
openairinterface5g/doc/: OAI_APPLY0_GNB_UE_LINK_DATAFLOW.md  OAI_RFSIM_GNB_UE_DATAFLOW_AND_SIONNA_FIR_BRIDGE.md  RFSIM_4x4_SIONNA_H_VS_LEGACY.md  SIONNA_EMBED_RFSIM.md  SIONNA_MULTIPATH_TO_OAI_FIR_6W1H.md  SIONNA_RFSIM_CONCEPT_AND_PATHS.md  SIONNA_RFSIM_PATCH_TODO.md  SIONNA_TDL_MODEL_DATAFLOW.md
openairinterface5g/executables/: nr-softmodem.c  nr-uesoftmodem.c
openairinterface5g/radio/rfsimulator/: CMakeLists.txt  apply_channelmod.c  rfsimulator.h  simulator.c
openairinterface5g/scripts/: source_rfsim_sionna_env.sh
openairinterface5g/sionna-main/: OAI_채널_대체_방안.md  PYTHON_TO_C_GUIDE.md  oai_channel_embed.py  oai_channel_poc.py  oai_channel_shared_rayleigh_4x4.py  oai_rfsim_metrics.py  oai_sionna_fir_embed.py  oai_sionna_fir_embed_mimo2x2.py  oai_sionna_fir_embed_siso.py  oai_sionna_fir_taps.py  채널_생성_과정_분석.md
openairinterface5g/sionna-main/examples/: Makefile  README.md  cython_example.pyx  python_to_c_example.c  python_to_c_example.py  setup_cython.py  test_cython.py
openairinterface5g/sionna-main/scripts/: sionna_advanced_channel_demo.py
openairinterface5g/tools/matlab/: nr_rfsim_plot_bler_vs_noise_rayleigh.m
(+56 files in other folders)
